Fix minor layout issue on product title

--- a/04_sgnote7/css/style.css
+++ b/04_sgnote7/css/style.css
@@ -52,6 +52,8 @@ header h1 {
   text-align: center;
   width: 100%;
   flex-shrink: 0;
+  padding: 0 1rem;
+  box-sizing: border-box;
 }
 
 .product section {
